3915	[bug]		Address a assertion if a route event arrived while
			shutting down. [RT #36887]

	--- 9.10.1b2 released ---

3914.	[bug]		Allow the URI target and CAA value fields to
			be zero length. [RT #36737]

3913.	[bug]		Address race issue in dispatch. [RT #36731]

3912.	[bug]		Address some unrecoverable lookup failures. [RT #36330]

3910.	[bug]		Fix races to free event during shutdown. [RT #36720]

3909.	[bug]		When computing the number of elements required for a
			acl count_acl_elements could have a short count leading
			to a assertion failure.  Also zero out new acl elements
			in dns_acl_merge.  [RT #36675]

3908.	[bug]		rndc now differentiates between a zone in multiple
			views and a zone that doesn't exist at all. [RT #36691]

3907.	[cleanup]	Alphabetise rndc help. [RT #36683]

3906.	[protocol]	Update URI record format to comply with
			draft-faltstrom-uri-08. [RT #36642]

3905.	[bug]		Address deadlock between view.c and adb.c. [RT #36341]

3904.	[func]		Add the RPZ SOA to the additional section. [RT36507]

3903.	[bug]		Improve the accuracy of DiG's reported round trip
			time. [RT 36611]

3902.	[bug]		liblwres wasn't handling link-local addresses in
			nameserver clauses in resolv.conf. [RT #36039]

3901.	[protocol]	Added support for CAA record type (RFC 6844).
			[RT #36625]

3900.	[bug]		Fix a crash in PostgreSQL DLZ driver. [RT #36637]

3899.	[bug]		"request-ixfr" is only applicable to slave and redirect
			zones. [RT #36608]

3898.	[bug]		Too small a buffer in tohexstr() calls in test code.
			[RT #36598]

3897.	[bug]		RPZ summary information was not properly being updated
			after a AXFR resulting in changes sometimes being
			ignored.  [RT #35885]

3896.	[bug]		Address performance issues with DSCP code on some
			platforms. [RT #36534]

3894.	[bug]		Buffers in isc_print_vsnprintf were not properly
			initialized leading to potential overflows when
			printing out quad values. [RT #36505]
