@@ -74,7 +74,7 @@ check_result(isc_result_t result, const char *message) {
  * "dest" must be an array of at least size 2*strlen(source) + 1.
  */
 static void
-quotestring(const char *source, char *dest) {
+quotestring(const unsigned char *source, unsigned char *dest) {
 	while (*source != 0) {
 		if (*source == '\'')
 			*dest++ = '\'';
@@ -101,19 +101,19 @@ addrdata(dns_name_t *name, dns_ttl_t ttl, dns_rdata_t *rdata) {
 	result = dns_name_totext(name, ISC_TRUE, &b);
 	check_result(result, "dns_name_totext");
 	namearray[isc_buffer_usedlength(&b)] = 0;
-	quotestring(namearray, canonnamearray);
+	quotestring((const unsigned char *)namearray, canonnamearray);
 
 	isc_buffer_init(&b, typearray, sizeof(typearray) - 1);
 	result = dns_rdatatype_totext(rdata->type, &b);
 	check_result(result, "dns_rdatatype_totext");
 	typearray[isc_buffer_usedlength(&b)] = 0;
-	quotestring(typearray, canontypearray);
+	quotestring((const unsigned char *)typearray, canontypearray);
 
 	isc_buffer_init(&b, dataarray, sizeof(dataarray) - 1);
 	result = dns_rdata_totext(rdata, NULL, &b);
 	check_result(result, "dns_rdata_totext");
 	dataarray[isc_buffer_usedlength(&b)] = 0;
-	quotestring(dataarray, canondataarray);
+	quotestring((const unsigned char *)dataarray, canondataarray);
 
 	snprintf(str, sizeof(str),
 		 "INSERT INTO %s (NAME, TTL, RDTYPE, RDATA)"
