@@ -1,4 +1,7 @@
-3915	[bug]		Address a assertion if a route event arrived while
+3916.	[contrib]	zone2sqlite checked wrong result code.  Address
+			compiler warnings. [RT #36931]
+
+3915.	[bug]		Address a assertion if a route event arrived while
 			shutting down. [RT #36887]
 
 	--- 9.10.1b2 released ---
